improved code readability

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -27,8 +27,16 @@
     "\n",
     "ax.set(xlabel='time (s)', ylabel='voltage (mV)',\n",
     "       title='The simplest plot in the world')\n",
-    "ax.grid()"
+    "ax.grid('on')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d535aa4d-dcf1-4565-b8e8-177e3f43b429",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
